# Machine-Learning

./: README.md  data_avec_prix.json  data_nettoye.json  data_scrapping.json  donnee_conso.json  pyproject.toml
ML_Miguel_Diot/: __main__.py  data.py  lib_Scraping.py  lib_appli_modele.py  lib_modeles.py  lib_nettoyage.py  lib_selections.py
ML_Miguel_Diot/htmlcov/: d_c5b6e74948aa0608___init___py.html  d_c5b6e74948aa0608___main___py.html  d_c5b6e74948aa0608_lib_model_py.html  d_c5b6e74948aa0608_lib_prix_py.html  index.html  status.json
ML_Miguel_Diot/htmlcov/htmlcov/: d_c5b6e74948aa0608_data_py.html  d_c5b6e74948aa0608_lib_Scraping_py.html  d_c5b6e74948aa0608_lib_appli_modele_py.html  d_c5b6e74948aa0608_lib_model_bis_py.html  d_c5b6e74948aa0608_lib_modeles_py.html  d_c5b6e74948aa0608_lib_nettoyage_py.html
tests/: test_data.py
