[tool.poetry]
name = "ML_Miguel_Diot"
version = "0.1.0"
description = ""
authors = ["Maurine <maurine.diot@etu.univ-tours.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.0.1"
serde = "^0.9.0"
pyserde = "^0.9.7"
typer = "^0.7.0"
requests = "^2.28.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.0"
selenium = "^4.7.2"
bs4 = "^0.0.1"
webdriver-manager = "^3.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
